+ SensitivityOptimizer: The power law index input has now the same sign as
  in cosima, it's the Gamma, i.e. the positive one (e.g. Crab has +2.19)

Examples:
+ The EventList example demonstrates the use of event list during simulation
  basically allowing any arbitrary beam/spectrum/polarization input

  
... plus many, many smaller things I already forgot about :)


Long-term bugs fixed:
+ Cosima: Voxel3D: The Y offset was used as Z offset during simulations
+ Cosima: In DecayMode buildup (the one used for hadron therapy, 
  not astrophysics) the DetectorDecayConstant was ignored
+ Revan: Reported by Alexey: Some events were incorrectly rejected in the classic
  event reconstruction approach

Important regressions fixed:
+ Between 4/26/2018 & 5/15/2018 the sim file reader skipped each second event...
  

******************************************************************************




Version 2.29/2.30
=================

*** IMPORTANT - PLEASE READ:

+ El Capitan / Xcode 7.x users: Run the setup script with the additional option
  --patch=yes to apply a set of necessary patches to ROOT and Geant4
+ Exchanged the (slow) ROOT rotations (TMatrix*) in Geomega with new
  MRotation class
  --> If something seems wrong with your rotations email me
+ Partial rewrite of the MEGAlib file I/O classes to enable transparent 
  handling of gzip'ed files
  --> Since I had to modify the whole I/O chain (including the interfaces), 
      email me if there are any problems reading or writing files
+ First beta version of calibration framework Fretalon with Melinator line 
  calibrator
+ Exchange of the ROOT geometry backend (switch to the TGeo* classes)
  --> Since this switch required significant changes in Geomega, please verify
      your geometries
+ The MEGAlib default materials have been changed to the new format
  ("XYZ.ComponentByAtoms Si 1") which is based on natural isotope distributions
  in Geant4. Thus the cross sections changed slightly.