@@ -69,6 +69,10 @@ class MDAngerCamera : public MDDetector
 
   //! Set the type XY-only or XYZ-only
   void SetPositioning(int Positioning) { m_PositionResolutionType = Positioning; }
+  //! Get the positioning
+  int GetPositioning() const { return m_PositionResolutionType; }
+  
+  
   void SetPositionResolution(const double Energy, const double Resolution);
 
   static const int c_PositionResolutionUnknown;
